Temp fix for nav collapsed gap

--- a/Git/custom.less
+++ b/Git/custom.less
@@ -1,6 +1,5 @@
 /*Custom CSS*/
 
-
 body {
   margin-top: 15px;
 }
@@ -9,6 +8,7 @@ body {
 
 .navbar-collapse {
    //padding-left: 20px; changed from 0px 
+   //Pushes menu out items ie after the ham. button is pushed
 }
 
 /*Floating navbar left*/
@@ -163,9 +163,14 @@ body .service-border {
 
 /* Making the button dark */
 
-#pushdown{
-  padding-bottom: 50px;
+#pushdown {
+  padding-bottom: 25px;
 }
+
+#pushdowntwo {
+  padding-bottom: 25px;
+}
+
 
 /*placeing the icon in the "http" in this case "file" part of the url doesn't work*/
 
